[bumpversion]
current_version = 0.1.1
tag = True
commit = True

[bumpversion:file:bourbaki/ioutils/__init__.py]

[bumpversion:file:version.txt]

[aliases]
test = pytest

[tool:pytest]
addopts = -v -x --ignore=tests/test_pickleutils.py --cov=bourbaki/ioutils/ --cov-report html
python_files = tests/test*.py

[metadata]
name = bourbaki_ioutils
version = file: version.txt
namespace_packages = bourbaki
author = Matthew Hawthorn
author_email = hawthorn.matthew@gmail.com
classifiers = 
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	License :: OSI Approved :: Apache Software License
	Operating System :: POSIX :: Linux
	Operating System :: MacOS :: MacOS X
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Utilities
	Typing :: Typed
license = Apache License 2.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bourbaki-py

[options]
packages = find:
install_requires = 
	cytoolz
	lz4>=1.1.0
	msgpack
	ujson
	multipledispatch>=0.4.9
setup_requires = 
	pytest-runner
	setuptools>=39.0
tests_require = 
	pytest
	pytest-cov

